objects/FundingAward.object
<CustomObject>
    <fields>
        <fullName>Awardee_Name__c</fullName>
        <formula>IndividualApplication.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awardee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gps_Available_for_Disbursement__c</fullName>
        <formula>Amount - gps_Unpaid_Disbursements__c - gps_Paid_Disbursements__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available for Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gps_Awarded_Amount__c</fullName>
        <formula>Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awarded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gps_ContractDescription__c</fullName>
        <formula>&quot;Contract details for &quot; &amp; Name &amp; &quot; under &quot; &amp;  FundingOpportunity.Name</formula>
        <label>Contract Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gps_ContractName__c</fullName>
        <formula>left(Name &amp; &quot; under &quot; &amp;  FundingOpportunity.Name,80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gps_Paid_Disbursements__c</fullName>
        <label>Paid Disbursements</label>
        <summarizedField>FundingDisbursement.Amount</summarizedField>
        <summaryFilterItems>
            <field>FundingDisbursement.Status</field>
            <operation>equals</operation>
            <value>Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>FundingDisbursement.FundingAwardId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>gps_Total_Cancelled__c</fullName>
        <label>Total Cancelled</label>
        <summarizedField>FundingDisbursement.Amount</summarizedField>
        <summaryFilterItems>
            <field>FundingDisbursement.Status</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>FundingDisbursement.FundingAwardId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>gps_Unpaid_Disbursements__c</fullName>
        <label>Unpaid Disbursements</label>
        <summarizedField>FundingDisbursement.Amount</summarizedField>
        <summaryFilterItems>
            <field>FundingDisbursement.Status</field>
            <operation>notEqual</operation>
            <value>Paid, Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>FundingDisbursement.FundingAwardId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>All_FundingAwards</fullName>
        <filterScope>Everything</filterScope>
        <label>All Funding Awards</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>